tests/baselines/reference/unicodeExtendedEscapesInStrings08_ES5.errors.txt
tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings08_ES5.ts(5,12): error TS1125: Hexadecimal digit expected.


==== tests/cases/conformance/es6/unicodeExtendedEscapes/unicodeExtendedEscapesInStrings08_ES5.ts (1 errors) ====
    
    // ES6 Spec - 10.1.1 Static Semantics: UTF16Encoding (cp)
    //  2. If cp ≤ 65535, return cp.
    // (FFFF == 65535)
    var x = "\u{FFFF}";
               
!!! error TS1125: Hexadecimal digit expected.
    